Added logic to draw engine dimensions at sea level and vaccus
